examples/test/testpolicy9834.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9834
  namespace: namespace316
spec:
  podSelector:
    matchLabels:
      key22: value20
      key18: value18
      key39: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value30
          key49: value3
      podSelector:
        matchLabels:
          key29: value19
          key39: value34
